fixed font color and white space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,24 +105,36 @@ footer{
   /* contact form */
   .input{
     display: block;
-    margin-left: 15px;
     height: 25px;
     width: 80%;
-    margin: 0 auto;
     background-color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
     
   }
    .forminput{
     width: 80%;
-    margin: 0 auto;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+    
   }
     
 .button{
-  margin-left:10%
+  margin-left:0
 
 }
 .textheight{
   line-height: 50px;
-  margin-left: 10%;
+  margin-left: 0;
   width: 80%
+}
+/* portfolio */
+.pmiddle{
+  width: 80%;
+  margin: 0 auto;
+  border-bottom: 10px;
+  padding: 20px;
+  color: #4aaaa5;
+  background-color:#ffffff;
+  height: 400px;
 }
